apps/jellyseerr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyseerr
  labels:
    istio-injection: enabled
